// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoriesPanel Both r: and repo: filters are tracked 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h4
        class="headerText"
      >
        Repositories
      </h4>
    </div>
    <div
      class="h-100 content"
    >
      <div
        class="mt-2"
      >
        <div
          class="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:sourcegraph"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                sourcegraph
              </span>
            </a>
          </small>
        </dd>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:test"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                test
              </span>
            </a>
          </small>
        </dd>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel Show More button is shown if more pages are available 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h4
        class="headerText"
      >
        Repositories
      </h4>
    </div>
    <div
      class="h-100 content"
    >
      <div
        class="mt-2"
      >
        <div
          class="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:test"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                test
              </span>
            </a>
          </small>
        </dd>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:sourcegraph"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                sourcegraph
              </span>
            </a>
          </small>
        </dd>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:test-two"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                test-two
              </span>
            </a>
          </small>
        </dd>
        <div
          class="text-center py-3"
        >
          <button
            class="btn btn-link test-repositories-panel-show-more"
            type="button"
          >
            Show more
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel Show More button loads more items 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h4
        class="headerText"
      >
        Repositories
      </h4>
    </div>
    <div
      class="h-100 content"
    >
      <div
        class="mt-2"
      >
        <div
          class="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:test"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                test
              </span>
            </a>
          </small>
        </dd>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:sourcegraph"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                sourcegraph
              </span>
            </a>
          </small>
        </dd>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:test-two"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                test-two
              </span>
            </a>
          </small>
        </dd>
        <div
          class="text-center py-3"
        >
          <button
            class="btn btn-link test-repositories-panel-show-more"
            type="button"
          >
            Show more
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel consecutive searches with identical repo filters are correctly merged when rendered 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h4
        class="headerText"
      >
        Repositories
      </h4>
    </div>
    <div
      class="h-100 content"
    >
      <div
        class="mt-2"
      >
        <div
          class="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:test"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                test
              </span>
            </a>
          </small>
        </dd>
        <dd
          class="text-monospace text-break"
        >
          <small>
            <a
              href="/search?q=repo:sourcegraph"
            >
              <span
                class="text-monospace search-query-link"
              >
                <span
                  class="search-filter-keyword"
                >
                  repo
                </span>
                <span
                  class="search-filter-separator"
                >
                  :
                </span>
                sourcegraph
              </span>
            </a>
          </small>
        </dd>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
